# adventofcode2022

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.rst  pyproject.toml  requirements.txt
adventofcode/: 00.py  01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  20.py  23.py  24.py
adventofcode/helper/: io.py
adventofcode/helper/io/: get_input_from_url.py
adventofcode/helper/template/: copy_files.py
tests/: __init__.py  test_adventofcode.py
