[tool.poetry]
name = "adventofcode"
version = "0.2022.12"
description = "Source for the 2022 version of Advent of Code."
authors = ["Thomas Camminady <0milieux_member@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<4"
ipykernel = "^6.16.1"
requests = "^2.28.1"
numpy = "^1.23.5"
rich = "^12.6.0"
pyclean = "^2.2.0"
beautifulsoup4 = "^4.11.1"


[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
