[tool.poetry]
name = "adventofcode"
version = "0.2022.23"
description = "Code for the 2022 version of Advent of Code."
authors = ["Thomas Camminady <0milieux_member@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<4"
ipykernel = "^6.16.1"
requests = "^2.28.1"
numpy = "^1.23.5"
rich = "^12.6.0"
pyclean = "^2.2.0"
beautifulsoup4 = "^4.11.1"
matplotlib = "^3.6.2"
shapely = "^2.0.0"
networkx = "^2.8.8"
numba = "^0.56.4"


[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
